name:                PhiledAlsa
version:             0.1.0.0
synopsis:            Rudimentary Alsa bindings
license:             MIT
license-file:        LICENSE
author:              Phil Scott
maintainer:          me@philscotted.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Alsa
  other-extensions:    ForeignFunctionInterface, GeneralizedNewtypeDeriving
  build-depends:       base >=4.8 && <4.9, mtl >=2.2 && <2.3
  default-language:    Haskell2010